<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/museum_name"
        android:layout_width="347dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/chinese"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="345dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/china" />

    <TextView
        android:id="@+id/txtSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinSenior"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museum_name"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/txtStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/student"
        app:layout_constraintEnd_toStartOf="@+id/spinStudent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museum_name" />

    <TextView
        android:id="@+id/txtAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        app:layout_constraintBottom_toTopOf="@+id/txtSenior"
        app:layout_constraintEnd_toStartOf="@+id/spinAdult"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStudent" />

    <Spinner
        android:id="@+id/spinStudent"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:entries="@array/Ticket_Quan"
        app:layout_constraintBottom_toTopOf="@+id/spinAdult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museum_name"
        app:layout_constraintVertical_bias="0.121" />

    <Spinner
        android:id="@+id/spinAdult"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:entries="@array/Ticket_Quan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/museum_name" />

    <Spinner
        android:id="@+id/spinSenior"
        android:layout_width="86dp"
        android:layout_height="51dp"
        android:entries="@array/Ticket_Quan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinAdult"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinSenior" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtbxTotal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tax"
        app:layout_constraintBottom_toTopOf="@+id/txtTotal"
        app:layout_constraintEnd_toStartOf="@+id/txtbxTax"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        app:layout_constraintBottom_toTopOf="@+id/txtTax"
        app:layout_constraintEnd_toStartOf="@+id/txtbxSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenior"
        app:layout_constraintVertical_bias="0.832" />

    <EditText
        android:id="@+id/txtbxSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:editable="false"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/txtbxTax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtbxTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:editable="false"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/txtbxTotal"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtbxTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:editable="false"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>